# Healthcare-agent

./: .gitignore  CLAUDE.md  Idea.md  README.md  plan.md
backend/: .env.example  config.py  database.py  exceptions.py  main.py  pyproject.toml
backend/agent/: care_agent.py
backend/agent/llm/: __init__.py  base.py  claude.py  deepseek.py  factory.py  types.py
backend/agent/protocols/: base.py  copd.py  factory.py  general.py  heart_failure.py  orthopedic.py  pneumonia.py
backend/agent/tools/: base.py  escalation.py  medication.py  registry.py  scheduling.py  symptom.py
backend/api/: deps.py
backend/api/middleware/: audit.py  error_handler.py
backend/api/routes/: dashboard.py  discharge.py  twilio_voice.py
backend/fhir/: client.py  parser.py  schemas.py
backend/models/db/: __init__.py  discharge.py  escalation.py  patient.py  session.py
backend/models/schemas/: __init__.py  discharge.py  escalation.py  patient.py  session.py
backend/repositories/: base.py  discharge.py  escalation.py  patient.py  session.py
backend/services/: discharge.py  notification.py  outreach.py  risk.py
backend/tasks/: celery_app.py  outreach.py
tests/: conftest.py  test_llm_clients.py  test_protocols.py  test_risk_scorer.py  test_tools.py
